phantom-coerce/tests/ui/asref_on_non_borrowed.stderr
error: asref marker is only valid for borrowed coercions
  --> tests/ui/asref_on_non_borrowed.rs:10:1
   |
10 | #[coerce(cloned = "BadAsRef<Marker2>", asref)]
   | ^
